<resources>
    <string name="app_name">Digital House Foods</string>
    <string name="restaurant_pic">Restaurant pic</string>
    <string name="dish_pic">Dish pic</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="or">OR</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="password_confirmation">Repeat password</string>
    <string name="closes_at_pattern">Closes at %1$s</string>
    <!-- Validation Messages -->
    <string name="invalid_email">E-mail invalid (pattern doesn\'t match)</string>
    <string name="invalid_password_minimum">Password invalid (value is too short)</string>
    <string name="invalid_password_confirmation">Password invalid (confirmation is different)</string>
    <string name="invalid_name_minimum">Name invalid (value is too short)</string>
    <string name="dishes">Dishes</string>
    <string name="back_button">Back Button</string>
</resources>